--- a/mysecurity/src/main/resources/application.properties
+++ b/mysecurity/src/main/resources/application.properties
@@ -9,3 +9,5 @@ jwt.public.key=classpath:pubkey.pem
 spring.jpa.show-sql=true
 logging.level.web=debug
 logging.level.org.springframework=debug
+
+server.error.whitelabel.enabled=false
